prevent filepicker from wrapping text to a new line

--- a/src/Components/Config/ConfigScreen.scss
+++ b/src/Components/Config/ConfigScreen.scss
@@ -229,6 +229,7 @@
         > p {
           overflow: hidden;
           text-overflow: ellipsis;
+          white-space: nowrap;
         }
 
         &:hover .tooltiptext {
